# yearly_report

./: .gitignore  Dockerfile  README.md  db_connect.sh  deploy.sh  dev.sh  docker-compose.yml  pyrightconfig.json  stack.yaml  tailwind.config.js  transactions.db  year-report-finances.cabal
.github/: dependabot.yml
.github/workflows/: build-branch.yml  build-main.yml  deploy-branch.yml  deploy-main.yml  populate-env.yml
.stack-work/: stack.sqlite3
.stack-work/ghci/0a2f0bd9/: cabal_macros.h
.stack-work/ghci/1c75192d/: cabal_macros.h
.stack-work/ghci/1e57c462/: cabal_macros.h
.stack-work/ghci/c0ecfb7c/: cabal_macros.h
fullstack/: .gitignore  deploy-to-finance.sh  deploy-worker.sh  deployment.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.worker.yml  docker-compose.yml  pre_flight_git.sh  run_fullstack.el  setup-worker.sh
fullstack/backend/: .gitignore  Dockerfile  Dockerfile.plaid  Dockerfile.worker  build.sh  func_utils.py  mypy.ini  pyproject.toml  requirements.txt  run_scheduler.py  setup.py  uploaded_file_pipeline_2025-03-16 10:30:00.520330.profile  uploaded_file_pipeline_2025-03-16 10:50:37.248457.profile  uploaded_file_pipeline_2025-03-16 10:52:31.737898.profile  uploaded_file_pipeline_2025-03-16 10:54:04.064230.profile  uploaded_file_pipeline_2025-03-16 10:58:36.452002.profile
fullstack/backend/app/: backend_pre_start.py  crud.py  db.py  func_utils.py  get_db_string.py  local_types.py  logging_config.json  main.py  models.py  open_ai_utils.py  parsers.py  run_scheduler.py  scheduler.py  telegram_utils.py  utils.py
fullstack/backend/app/alembic/: env.py  helpers.py
fullstack/backend/app/alembic/versions/: 09092ab0776f_add_future.py  (+67 more)
fullstack/backend/app/api/: deps.py  main.py
fullstack/backend/app/budgets/: check_budget.py
fullstack/backend/app/core/: config.py  db.py  mypy.ini  oauth.py  security.py
fullstack/backend/app/email/: send.py
fullstack/backend/app/email_generators/: welcome_email.py
fullstack/backend/app/models/: __init__.py  audit_log.py  budget.py  category.py  column_chart_config.py  cron_state.py  effect.py  filter.py  models.py  plaid.py  report.py  sankey.py  saved_filter.py  stripe.py  transaction.py  transaction_source.py  upload_configuration.py  uploaded_pdf.py  user.py  worker_job.py  worker_status.py
fullstack/backend/app/no_code/: decoration.py  functions.py  generators.py  outputs.py  step.py  transformations.py  updaters.py
fullstack/backend/app/plaid/: __init__.py  balance.py  balance_history.py  client.py  models.py  sync_service.py
fullstack/backend/app/schemas/: no_code.py  saved_filter.py  subscription.py  two_factor.py
fullstack/backend/app/seed/: accounts_page.py  effects.py
fullstack/backend/app/stripe/: service.py
fullstack/backend/app/tests/: conftest.py  test_check_budget.py
fullstack/backend/app/uploaded_file_pipeline/: categorizer.py  configuration_creator.py  local_types.py  main.py  transaction_parser.py  uploaded_file_pipeline.py
fullstack/backend/app/worker/: enqueue_job.py  main.py  status.py
fullstack/backend/scripts/: prestart.sh  start-prod.sh  test.sh
fullstack/frontend/: .eslintcache--fix  .gitignore  Biomefile  Dockerfile  README.md  TODO.md  build.sh  eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
fullstack/frontend/public/: sitemap.xml
fullstack/frontend/src/: index.css  main.tsx  routeTree.gen.ts  theme.tsx  utils.ts
fullstack/frontend/src/client/: sdk.gen.ts  types.gen.ts
fullstack/frontend/src/components/: TwoFactorSetup.tsx  TwoFactorVerification.tsx
fullstack/frontend/src/contexts/: FilterContext.tsx  NoCodeContext.tsx  UserContext.tsx
fullstack/frontend/src/hooks/: useAuth.ts  useColor.tsx  useColorPalette.ts  useCustomToast.ts  useFilterState.ts  useFilters.ts  useIsMobile.ts  useSavedFilters.ts
fullstack/frontend/src/lib/: utils.ts
fullstack/frontend/src/routes/: __root.tsx  _layout.tsx  demo.tsx  faq.tsx  landing.tsx  login.tsx  recover-password.tsx  reset-password.tsx  signup.tsx  terms.tsx
fullstack/frontend/tests/: user-settings.spec.ts
fullstack/my-full-stack/: README.md
fullstack/my-full-stack/backend/app/: crud.py  db.py  local_types.py
fullstack/scripts/: generate-client.sh
python/: db.py  models.py
server/: deploy_server.sh  docker-compose.yml
src/: Admin.hs  Auth.hs  Bank.hs  Categorizer.hs  ColumnChart.hs  ConnectionPool.hs  CreditCard.hs  Database.hs  Dockerfile.worker  ExampleFileParser.hs  HtmlGenerators.hs  Main.hs  Models.hs  NewDatabase.hs  OpenAiUtils.hs  Parsers.hs  Sankey.hs  SankeyConfiguration.hs  Types.hs
src/Database/: Category.hs  Configurations.hs  ConnectionPool.hs  Database.hs  Files.hs  Jobs.hs  Models.hs  Transaction.hs  TransactionSource.hs  UploadConfiguration.hs
src/HtmlGenerators/: AccountManagement.hs  Admin.hs  AllFilesPage.hs  AuthPages.hs  Components.hs  Configuration.hs  ConfigurationNew.hs  HomePage.hs  HomePageHelpers.hs  HtmlGenerators.hs  LandingPage.hs  Layout.hs  OnboardingFour.hs  OnboardingOne.hs  OnboardingThree.hs  OnboardingTwo.hs  RefineSelectionPage.hs  UploadPage.hs
src/Routes/Admin/: RegisterAdmin.hs
src/Routes/Api/Visualization/: RegisterVisualization.hs
src/Routes/Configuration/: RegisterConfiguration.hs
src/Routes/Crud/Category/: RegisterCategory.hs
src/Routes/Crud/File/: RegisterFile.hs
src/Routes/Crud/Sankey/: RegisterSankey.hs
src/Routes/Crud/Transaction/: RegisterTransaction.hs
src/Routes/Crud/TransactionSource/: RegisterTransactionSource.hs
src/Routes/Demo/: RegisterDemo.hs
src/Routes/Login/: RegisterLogin.hs
src/Routes/Misc/: RegisterMisc.hs
src/Routes/Onboarding/: RegisterOnboarding.hs
src/Routes/Upload/: RegisterUpload.hs
src/Worker/: Main.hs  ParseFileJob.hs
static/: allPages.js  histogram.js  onboarding.js  sankey.js  slider.js  style.css  tabs.js  toggle.js  updateKeywords.js  upload.js
static/css/: auth.css  input.css  landing.css  navbar.css  onboarding.css  output.css
templates/: .env.template
tests/: TestBank.hs
(+204 files in other folders)
