name: year-report-finances
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  exposed-modules: 
    Types
    Database
    Categorizer
    HtmlGenerators.HtmlGenerators
    HtmlGenerators.HomePage
    HtmlGenerators.AllFilesPage
    HtmlGenerators.RefineSelectionPage
    HtmlGenerators.Configuration
    Sankey
    Parsers
    OpenAiUtils
  build-depends:
      base >= 4.7 && < 5,
      text >= 1.2 && < 2.2,
      containers,
      time,
      process,
      wai-extra,
      wai-middleware-static,
      aeson >= 1.5,
      http-client >= 0.7,
      http-types,
      async,
      http-client-tls >= 0.3,
      sqlite-simple >= 0.4,
      bytestring >= 0.10,
      filepath >= 1.4,
      directory >= 1.3,
      scotty >= 0.11,
      blaze-html >= 0.9           
  default-language: Haskell2010

executable year-report-finances
  main-is: Main.hs
  hs-source-dirs: src
  other-modules:
      Types
      Database
      Categorizer
      HtmlGenerators.HtmlGenerators
      HtmlGenerators.HomePage
      HtmlGenerators.AllFilesPage
      HtmlGenerators.RefineSelectionPage
      HtmlGenerators.Configuration
      Sankey
      Parsers
      OpenAiUtils
  build-depends:
      base >= 4.7 && < 5,
      text >= 1.2 && < 2.2,
      containers,
      time,
      process,
      wai-extra,
      wai-middleware-static,
      aeson >= 1.5,
      async,
      http-client >= 0.7,
      http-types,
      http-client-tls >= 0.3,
      sqlite-simple >= 0.4,
      bytestring >= 0.10,
      filepath >= 1.4,
      directory >= 1.3,
      scotty >= 0.11,
      blaze-html >= 0.9
  ghc-options: -threaded
  default-language: Haskell2010


test-suite year-report-finances-test
  type: exitcode-stdio-1.0
  main-is: TestBank.hs
  hs-source-dirs: tests
  other-modules:
    Bank
  build-depends:
    base >= 4.7 && < 5,
    text >= 1.2 && < 2.2,
    containers,
    QuickCheck >= 2.14 && < 3,
    year-report-finances,
    aeson >= 1.5,
    http-client >= 0.7,
    http-client-tls >= 0.3,
    sqlite-simple >= 0.4,
    bytestring >= 0.10
  default-language: Haskell2010
