name: year-report-finances
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  exposed-modules: 
    Types
    Database.Database
    Database.Category
    Database.TransactionSource
    Database.UploadConfiguration
    Database.Transaction
    Database.Configurations
    Database.ConnectionPool
    Database.Models
    Database.Files
    Categorizer
    HtmlGenerators.HtmlGenerators
    HtmlGenerators.Components
    HtmlGenerators.HomePage
    HtmlGenerators.AllFilesPage
    HtmlGenerators.RefineSelectionPage
    HtmlGenerators.Layout
    HtmlGenerators.Configuration
    HtmlGenerators.AuthPages
    Auth
    Sankey
    Parsers
    OpenAiUtils
  build-depends:
      base >= 4.7 && < 5,
      text >= 1.2 && < 2.2,
      containers,
      time,
      process,
      wai-extra,
      wai-middleware-static,
      transformers,
      unliftio-core,
      HList >=0.5.0.0,
      aeson >= 1.5,
      http-client >= 0.7,
      http-types,
      monad-logger,
      async,
      persistent,
      persistent-postgresql,
      persistent-template,
      http-client-tls >= 0.3,
      bytestring >= 0.10,
      filepath >= 1.4,
      directory >= 1.3,
      scotty >= 0.11,
      blaze-html >= 0.9,
      cookie >= 0.5.0,
      cryptonite >= 0.30,
      random >= 1.2,
      wai >= 3.2
  default-language: Haskell2010

executable year-report-finances
  main-is: Main.hs
  hs-source-dirs: src
  other-modules:
      Types
      Database.Database
      Database.Category
      Database.TransactionSource
      Database.UploadConfiguration
      Database.Transaction
      Database.Configurations
      Database.ConnectionPool
      Database.Models
      Database.Files
      Categorizer
      HtmlGenerators.HtmlGenerators
      HtmlGenerators.HomePage
      HtmlGenerators.Components
      HtmlGenerators.Layout
      HtmlGenerators.AuthPages
      HtmlGenerators.AllFilesPage
      HtmlGenerators.RefineSelectionPage
      HtmlGenerators.Configuration
      Auth
      Sankey
      Parsers
      OpenAiUtils
  build-depends:
      base >= 4.7 && < 5,
      text >= 1.2 && < 2.2,
      containers,
      time,
      transformers,
      HList >=0.5.0.0,
      unliftio-core,
      process,
      monad-logger,
      wai-extra,
      wai-middleware-static,
      aeson >= 1.5,
      async,
      persistent,
      persistent-postgresql,
      persistent-template,
      http-client >= 0.7,
      http-types,
      http-client-tls >= 0.3,
      bytestring >= 0.10,
      filepath >= 1.4,
      directory >= 1.3,
      scotty >= 0.11,
      blaze-html >= 0.9,
      cookie >= 0.5.0,
      cryptonite >= 0.30,
      random >= 1.2,
      wai >= 3.2
  ghc-options: -threaded
  default-language: Haskell2010


test-suite year-report-finances-test
  type: exitcode-stdio-1.0
  main-is: TestBank.hs
  hs-source-dirs: tests
  other-modules:
    Bank
  build-depends:
    base >= 4.7 && < 5,
    text >= 1.2 && < 2.2,
    containers,
    QuickCheck >= 2.14 && < 3,
    year-report-finances,
    aeson >= 1.5,
    http-client >= 0.7,
    http-client-tls >= 0.3,
    bytestring >= 0.10
  default-language: Haskell2010
