name: year-report-finances
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10

library year-report-finances-lib
  hs-source-dirs: src
  exposed-modules: 
    Types
    Database.Database
    Database.Category
    Database.TransactionSource
    Database.UploadConfiguration
    Database.Transaction
    Database.Configurations
    Database.ConnectionPool
    Database.Models
    Database.Files
    Categorizer
    HtmlGenerators.HtmlGenerators
    HtmlGenerators.Components
    HtmlGenerators.HomePage
    HtmlGenerators.HomePageHelpers
    HtmlGenerators.AllFilesPage
    HtmlGenerators.Layout
    HtmlGenerators.Configuration
    HtmlGenerators.ConfigurationNew
    HtmlGenerators.AuthPages
    HtmlGenerators.LandingPage
    HtmlGenerators.OnboardingOne
    HtmlGenerators.OnboardingTwo
    HtmlGenerators.OnboardingThree
    HtmlGenerators.OnboardingFour
    HtmlGenerators.UploadPage 
    HtmlGenerators.AccountManagement
    Routes.Onboarding.RegisterOnboarding
    Routes.Login.RegisterLogin
    Routes.Misc.RegisterMisc
    Routes.Api.Visualization.RegisterVisualization
    Routes.Crud.Sankey.RegisterSankey
    Routes.Crud.Category.RegisterCategory
    Routes.Crud.Transaction.RegisterTransaction
    Routes.Crud.TransactionSource.RegisterTransactionSource
    Routes.Demo.RegisterDemo
    Routes.Configuration.RegisterConfiguration
    Routes.Upload.RegisterUpload
    Routes.Crud.File.RegisterFile
    Auth
    Sankey
    ColumnChart
    SankeyConfiguration
    Parsers
    ExampleFileParser
    OpenAiUtils
  build-depends:
      base >= 4.7 && < 5,
      text >= 1.2 && < 2.2,
      containers,
      time,
      process,
      wai-extra,
      wai-middleware-static,
      transformers,
      unliftio-core,
      HList >=0.5.0.0,
      aeson >= 1.5,
      http-client >= 0.7,
      http-types,
      monad-logger,
      async,
      persistent,
      persistent-postgresql,
      persistent-template,
      http-client-tls >= 0.3,
      bytestring >= 0.10,
      filepath >= 1.4,
      directory >= 1.3,
      scotty >= 0.11,
      blaze-html >= 0.9,
      cookie >= 0.5.0,
      cryptonite >= 0.30,
      random >= 1.2,
      wai >= 3.2
  default-language: Haskell2010

executable year-report-finances
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
      year-report-finances-lib,
      base >= 4.7 && < 5,
      text >= 1.2 && < 2.2,
      containers,
      time,
      transformers,
      HList >=0.5.0.0,
      unliftio-core,
      process,
      monad-logger,
      wai-extra,
      wai-middleware-static,
      aeson >= 1.5,
      async,
      persistent,
      persistent-postgresql,
      persistent-template,
      http-client >= 0.7,
      http-types,
      http-client-tls >= 0.3,
      bytestring >= 0.10,
      filepath >= 1.4,
      directory >= 1.3,
      scotty >= 0.11,
      blaze-html >= 0.9,
      cookie >= 0.5.0,
      cryptonite >= 0.30,
      random >= 1.2,
      wai >= 3.2
  ghc-options: -threaded
  default-language: Haskell2010



executable worker-task
  main-is: Worker/Main.hs
  hs-source-dirs: src
  build-depends:
      base >= 4.7 && < 5,
      year-report-finances-lib,
      text >= 1.2 && < 2.2,
      containers,
      time,
      transformers,
      HList >=0.5.0.0,
      unliftio-core,
      process,
      monad-logger,
      wai-extra,
      wai-middleware-static,
      aeson >= 1.5,
      async,
      persistent,
      persistent-postgresql,
      persistent-template,
      http-client >= 0.7,
      http-types,
      http-client-tls >= 0.3,
      bytestring >= 0.10,
      filepath >= 1.4,
      directory >= 1.3,
      scotty >= 0.11,
      blaze-html >= 0.9,
      cookie >= 0.5.0,
      cryptonite >= 0.30,
      random >= 1.2,
      wai >= 3.2
  ghc-options: -threaded
  default-language: Haskell2010
